# pcl_training

./: README.md
object_recognition/CRH/: CMakeLists.txt  crh.cpp  crh_.cpp
object_recognition/correspondence_grouping/: CMakeLists.txt  README.md  correspondence_grouping.cpp
object_recognition/hypothesis_verification/: README.md  global_hypothesis_verification.cpp
object_recognition/test/: CMakeLists.txt  tracking_test.cpp
passthrough_filter/: README.md
reading_pcd_file/: CMakeLists.txt  README.md
